fix bugs in chat and in settings on small resolutions (profile tab) and minor css changes for UI according to mobile design

--- a/css/_atlaskit_overrides.scss
+++ b/css/_atlaskit_overrides.scss
@@ -63,6 +63,14 @@
 }
 
 /**
+ * Override more actions pop-up
+ */
+.toolbox-button-wth-dialog .eYJELv {
+    background-color: $chatInputBackground !important;
+    border: 1px solid $borderColor !important;
+}
+
+/**
  * Override pop-ups text color
  */
 .oQiLZ,
