--- a/css/_popover.scss
+++ b/css/_popover.scss
@@ -44,6 +44,7 @@
 
 .popover {
     background-color: $popOverBackground;
+    border: 1px solid $borderColor;
     border-radius: 3px;
     margin: -16px -24px;
     padding: 16px 24px;
