--- a/css/modals/settings/_settings.scss
+++ b/css/modals/settings/_settings.scss
@@ -32,6 +32,10 @@
     .profile-edit {
         display: flex;
         width: 100%;
+
+        @media (max-width: $mobileWidth) {
+            flex-direction: column;
+        }
     }
 
     .profile-edit-field,
